--- a/MiApp.Presentacion/Pages/Index.cshtml
+++ b/MiApp.Presentacion/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Hola mundo</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienvenidos a la Super App Transito</h1>
+    
 </div>
